@@ -26,6 +26,19 @@
  * @short_description: Pseudo link pads
  * @see_also: #GstPad
  *
+ * GhostPads are useful when organizing pipelines with #GstBin like elements.
+ * The idea here is to create hierarchical element graphs. The bin element
+ * contains a sub-graph. Now one would like to treat the bin-element like other
+ * #GstElements. This is where GhostPads come into play. A GhostPad acts as a
+ * proxy for another pad. Thus the bin can have sink and source ghost-pads that
+ * are accociated with sink and source pads of the child elements.
+ *
+ * If the target pad is known at creation time, gst_ghost_pad_new() is the
+ * function to use to get a ghost-pad. Otherwise one can use gst_ghost_pad_new_notarget()
+ * to create the ghost-pad and use gst_ghost_pad_set_target() to establish the
+ * accociation later on.
+ *
+ * Last reviewed on 2005-11-18 (0.9.5)
  */
 
 #include "gst_private.h"
